Add auto-click script for AR link on load

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 
 <a id="arlink" rel="ar" href="test.usdz"></a>
 
+<script>
+window.onload = function() {
+  var el = document.getElementById('arlink');
+  if(el) el.click();
+}
+</script>
+
 </body>
 </html>
