Update AR link and remove auto-click script

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-<a id="arlink" rel="ar" href="test.usdz"></a>
+<a rel="ar" href="test.usdz">Test</a>
 
-<script>
+<!-- <script>
 window.onload = function() {
   var el = document.getElementById('arlink');
   if(el) el.click();
 }
-</script>
+</script> -->
 
 </body>
 </html>
