Add heading and image link to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-<a rel="ar" href="test.usdz">Test</a>
+  <h1>Hello</h1>
+
+<a rel="ar" href="test.usdz">
+  <img src="pmcskin3d-steve-4.png">
+</a>
 
 <!-- <script>
 window.onload = function() {
