Fix AR link and uncomment script for auto-click

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
   <h1>Hello</h1>
 
-<a rel="ar" href="test.usdz">
+<a rel="ar" id="arlink "href="test.usdz">
   <img src="pmcskin3d-steve-4.png">
 </a>
 
-<!-- <script>
+<script>
 window.onload = function() {
   var el = document.getElementById('arlink');
   if(el) el.click();
 }
-</script> -->
+</script>
 
 </body>
 </html>
